# OrnaCodexCrawler

./: README.md  main.py  ornacodexcrawler-cleanup.patch  ornacodexcrawler-force-ipv4-fix2.patch  pyproject.toml
.github/workflows/: crawl.yml  tests.yml
ornacodex/: settings.py
ornacodex/scripts/: clean_items.py  codex.py  download.py  dump_toml.py
ornacodex/spiders/: _base.py  bosses.py  classes.py  followers.py  images.py  item_types.py  items.py  monsters.py  raids.py  spells.py
ornacodex/utils/: extractor.py  network.py
tests/: test_base_spider.py  test_clean_items.py  test_converter.py  test_download.py  test_extractor.py  test_network.py
